src/routes/layout.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');

@import 'tailwindcss';
@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

cap-widget {
}

@theme {
	--font-inter: 'Inter', sans-serif;
	--font-mulish: 'Mulish', sans-serif;
	--font-wix: 'Wix Madefor Text', sans-serif;
}

@layer base {
	:root {
		@apply font-inter font-light;
	}
}

@layer components {
	h1 {
		@apply text-xl;
	}
	h2 {
		@apply text-lg;
	}
	hr {
		@apply opacity-10;
	}
	button {
		@apply transition-all duration-100 hover:brightness-70 not-disabled:hover:-translate-0.5 active:brightness-50 disabled:brightness-50 disabled:saturate-0;
	}
	.buttonPrimary {
		@apply rounded-full p-2 ps-3 pe-3 font-bold;
	}
	.buttonLarge {
		@apply p-2;
	}
	input:focus {
		@apply outline-0;
	}
	input::placeholder {
		@apply opacity-70;
	}
	textarea::placeholder {
		@apply opacity-70;
	}
}

